[gd_scene load_steps=8 format=2]

[ext_resource path="res://AudioRelated/GUIRelated/AudioSettingsPanel/Assets/AudioSettingsPanel_BodyFillBackground.png" type="Texture" id=1]
[ext_resource path="res://AudioRelated/GUIRelated/AudioSettingsPanel/Assets/AudioSettingsPanel_SideBorder.png" type="Texture" id=2]
[ext_resource path="res://AudioRelated/GUIRelated/AudioSettingsPanel/AudioSettingsPanel.gd" type="Script" id=3]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://AudioRelated/GUIRelated/AudioSettingsPanel/Subs/AudioBusVolumePanel/AudioBusVolumePanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://AudioRelated/GUIRelated/AudioSettingsPanel/Assets/AudioSettingsPanel_ShadeBackground.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="AudioSettingsPanel" type="MarginContainer"]
margin_right = 250.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="ShadeBackground" type="TextureRect" parent="."]
margin_right = 250.0
margin_bottom = 200.0
mouse_filter = 0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 250.0
margin_bottom = 200.0
rect_min_size = Vector2( 250, 200 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Background" type="TextureRect" parent="MarginContainer2"]
margin_right = 250.0
margin_bottom = 200.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="MarginContainer2"]
margin_right = 3.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="MarginContainer2"]
margin_left = 247.0
margin_right = 250.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="MarginContainer2"]
margin_top = 197.0
margin_right = 250.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="MarginContainer2"]
margin_right = 250.0
margin_bottom = 3.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
margin_right = 250.0
margin_bottom = 200.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 238.0
margin_bottom = 188.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer"]
margin_right = 226.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Audio Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 226.0
margin_bottom = 173.0

[node name="AudioBusVolumePanel_Background" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_left = 15.0
margin_right = 210.0
rect_min_size = Vector2( 195, 0 )
size_flags_horizontal = 6

[node name="AudioBusVolumePanel_SoundFX" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_left = 15.0
margin_top = 76.0
margin_right = 210.0
margin_bottom = 148.0
rect_min_size = Vector2( 195, 0 )
size_flags_horizontal = 6
